hw3/parser.output
Grammar

    0 $accept: program $end

    1 program: declarationlist

    2 declarationlist: declarationlist declaration
    3                | declaration

    4 declaration: vardeclaration
    5            | fundeclaration

    6 vardeclaration: typespecifier vardecllist SEMI

    7 scopedvardeclaration: scopedtypespecifier vardecllist SEMI

    8 vardecllist: vardecllist COMMA vardeclinitialize
    9            | vardeclinitialize

   10 vardeclinitialize: vardeclid
   11                  | vardeclid COLON simpleexpression

   12 vardeclid: ID
   13          | ID LBRACKET NUMCONST RBRACKET

   14 scopedtypespecifier: STATIC typespecifier
   15                    | typespecifier

   16 typespecifier: INT
   17              | BOOL
   18              | CHAR

   19 fundeclaration: typespecifier ID LPAREN params RPAREN statement
   20               | ID LPAREN params RPAREN statement

   21 params: paramlist
   22       | /* empty */

   23 paramlist: paramlist SEMI paramtypelist
   24          | paramtypelist

   25 paramtypelist: typespecifier paramidlist

   26 paramidlist: paramidlist COMMA paramid
   27            | paramid

   28 paramid: ID
   29        | ID LBRACKET RBRACKET

   30 statement: matchedselectionstmt
   31          | unmatchedselectionstmt

   32 sstatement: expressionstmt
   33           | compoundstmt
   34           | returnstmt
   35           | breakstmt

   36 compoundstmt: LBRACE localdeclarations statementlist RBRACE

   37 localdeclarations: localdeclarations scopedvardeclaration
   38                  | /* empty */

   39 statementlist: statementlist statement
   40              | /* empty */

   41 expressionstmt: expression SEMI
   42               | SEMI

   43 matchedselectionstmt: IF LPAREN simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   44                     | WHILE LPAREN simpleexpression RPAREN matchedselectionstmt
   45                     | FOREACH LPAREN mutable IN simpleexpression RPAREN matchedselectionstmt
   46                     | sstatement

   47 unmatchedselectionstmt: IF LPAREN simpleexpression RPAREN statement
   48                       | IF LPAREN simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt
   49                       | WHILE LPAREN simpleexpression RPAREN unmatchedselectionstmt
   50                       | FOREACH LPAREN mutable IN simpleexpression RPAREN unmatchedselectionstmt

   51 returnstmt: RETURN SEMI
   52           | RETURN expression SEMI

   53 breakstmt: BREAK SEMI

   54 expression: mutable ASSIGN expression
   55           | mutable PASSIGN expression
   56           | mutable MASSIGN expression
   57           | mutable INC
   58           | mutable DEC
   59           | simpleexpression

   60 simpleexpression: simpleexpression OR andexpression
   61                 | andexpression

   62 andexpression: andexpression AND unaryrelexpression
   63              | unaryrelexpression

   64 unaryrelexpression: NOT unaryrelexpression
   65                   | relexpression

   66 relexpression: sumexpression relop sumexpression
   67              | sumexpression

   68 relop: LEQ
   69      | LESSER
   70      | GREATER
   71      | GEQ
   72      | EQUIV
   73      | NEQ

   74 sumexpression: sumexpression sumop term
   75              | term

   76 sumop: PLUS
   77      | MINUS

   78 term: term mulop unaryexpression
   79     | unaryexpression

   80 mulop: MULTI
   81      | DIVIDE
   82      | MOD

   83 unaryexpression: unaryop unaryexpression
   84                | factor

   85 unaryop: MINUS
   86        | MULTI

   87 factor: immutable
   88       | mutable

   89 mutable: ID
   90        | ID LBRACKET expression RBRACKET

   91 immutable: LPAREN expression RPAREN
   92          | call
   93          | constant

   94 call: ID LPAREN args RPAREN

   95 args: arglist
   96     | /* empty */

   97 arglist: arglist COMMA expression
   98        | expression

   99 constant: NUMCONST
  100         | CHARCONST
  101         | STRINGCONST
  102         | TRUE
  103         | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 12 13 19 20 28 29 89 90 94
NUMCONST (259) 13 99
CHARCONST (260) 100
STRINGCONST (261) 101
AND (262) 62
BREAK (263) 53
BOOL (264) 17
CHAR (265) 18
ELSE (266) 43 48
FALSE (267) 103
FOREACH (268) 45 50
IF (269) 43 47 48
IN (270) 45 50
INT (271) 16
OR (272) 60
NOT (273) 64
RETURN (274) 51 52
TRUE (275) 102
STATIC (276) 14
WHILE (277) 44 49
COMMA (278) 8 26 97
LBRACKET (279) 13 29 90
RBRACKET (280) 13 29 90
LPAREN (281) 19 20 43 44 45 47 48 49 50 91 94
RPAREN (282) 19 20 43 44 45 47 48 49 50 91 94
LBRACE (283) 36
RBRACE (284) 36
SEMI (285) 6 7 23 41 42 51 52 53
EQUIV (286) 72
NEQ (287) 73
LEQ (288) 68
LESSER (289) 69
GEQ (290) 71
GREATER (291) 70
ASSIGN (292) 54
PASSIGN (293) 55
MASSIGN (294) 56
DEC (295) 58
INC (296) 57
COLON (297) 11
PLUS (298) 76
MINUS (299) 77 85
DIVIDE (300) 81
MOD (301) 82
MULTI (302) 80 86


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declarationlist (50)
    on left: 2 3, on right: 1 2
declaration (51)
    on left: 4 5, on right: 2 3
vardeclaration (52)
    on left: 6, on right: 4
scopedvardeclaration (53)
    on left: 7, on right: 37
vardecllist (54)
    on left: 8 9, on right: 6 7 8
vardeclinitialize (55)
    on left: 10 11, on right: 8 9
vardeclid (56)
    on left: 12 13, on right: 10 11
scopedtypespecifier (57)
    on left: 14 15, on right: 7
typespecifier (58)
    on left: 16 17 18, on right: 6 14 15 19 25
fundeclaration (59)
    on left: 19 20, on right: 5
params (60)
    on left: 21 22, on right: 19 20
paramlist (61)
    on left: 23 24, on right: 21 23
paramtypelist (62)
    on left: 25, on right: 23 24
paramidlist (63)
    on left: 26 27, on right: 25 26
paramid (64)
    on left: 28 29, on right: 26 27
statement (65)
    on left: 30 31, on right: 19 20 39 47
sstatement (66)
    on left: 32 33 34 35, on right: 46
compoundstmt (67)
    on left: 36, on right: 33
localdeclarations (68)
    on left: 37 38, on right: 36 37
statementlist (69)
    on left: 39 40, on right: 36 39
expressionstmt (70)
    on left: 41 42, on right: 32
matchedselectionstmt (71)
    on left: 43 44 45 46, on right: 30 43 44 45 48
unmatchedselectionstmt (72)
    on left: 47 48 49 50, on right: 31 48 49 50
returnstmt (73)
    on left: 51 52, on right: 34
breakstmt (74)
    on left: 53, on right: 35
expression (75)
    on left: 54 55 56 57 58 59, on right: 41 52 54 55 56 90 91 97 98
simpleexpression (76)
    on left: 60 61, on right: 11 43 44 45 47 48 49 50 59 60
andexpression (77)
    on left: 62 63, on right: 60 61 62
unaryrelexpression (78)
    on left: 64 65, on right: 62 63 64
relexpression (79)
    on left: 66 67, on right: 65
relop (80)
    on left: 68 69 70 71 72 73, on right: 66
sumexpression (81)
    on left: 74 75, on right: 66 67 74
sumop (82)
    on left: 76 77, on right: 74
term (83)
    on left: 78 79, on right: 74 75 78
mulop (84)
    on left: 80 81 82, on right: 78
unaryexpression (85)
    on left: 83 84, on right: 78 79 83
unaryop (86)
    on left: 85 86, on right: 83
factor (87)
    on left: 87 88, on right: 84
mutable (88)
    on left: 89 90, on right: 45 50 54 55 56 57 58 88
immutable (89)
    on left: 91 92 93, on right: 87
call (90)
    on left: 94, on right: 92
args (91)
    on left: 95 96, on right: 94
arglist (92)
    on left: 97 98, on right: 95 97
constant (93)
    on left: 99 100 101 102 103, on right: 93


state 0

    0 $accept: . program $end

    ID    shift, and go to state 1
    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    program          go to state 5
    declarationlist  go to state 6
    declaration      go to state 7
    vardeclaration   go to state 8
    typespecifier    go to state 9
    fundeclaration   go to state 10


state 1

   20 fundeclaration: ID . LPAREN params RPAREN statement

    LPAREN  shift, and go to state 11


state 2

   17 typespecifier: BOOL .

    $default  reduce using rule 17 (typespecifier)


state 3

   18 typespecifier: CHAR .

    $default  reduce using rule 18 (typespecifier)


state 4

   16 typespecifier: INT .

    $default  reduce using rule 16 (typespecifier)


state 5

    0 $accept: program . $end

    $end  shift, and go to state 12


state 6

    1 program: declarationlist .
    2 declarationlist: declarationlist . declaration

    ID    shift, and go to state 1
    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration     go to state 13
    vardeclaration  go to state 8
    typespecifier   go to state 9
    fundeclaration  go to state 10


state 7

    3 declarationlist: declaration .

    $default  reduce using rule 3 (declarationlist)


state 8

    4 declaration: vardeclaration .

    $default  reduce using rule 4 (declaration)


state 9

    6 vardeclaration: typespecifier . vardecllist SEMI
   19 fundeclaration: typespecifier . ID LPAREN params RPAREN statement

    ID  shift, and go to state 14

    vardecllist        go to state 15
    vardeclinitialize  go to state 16
    vardeclid          go to state 17


state 10

    5 declaration: fundeclaration .

    $default  reduce using rule 5 (declaration)


state 11

   20 fundeclaration: ID LPAREN . params RPAREN statement

    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    $default  reduce using rule 22 (params)

    typespecifier  go to state 18
    params         go to state 19
    paramlist      go to state 20
    paramtypelist  go to state 21


state 12

    0 $accept: program $end .

    $default  accept


state 13

    2 declarationlist: declarationlist declaration .

    $default  reduce using rule 2 (declarationlist)


state 14

   12 vardeclid: ID .
   13          | ID . LBRACKET NUMCONST RBRACKET
   19 fundeclaration: typespecifier ID . LPAREN params RPAREN statement

    LBRACKET  shift, and go to state 22
    LPAREN    shift, and go to state 23

    $default  reduce using rule 12 (vardeclid)


state 15

    6 vardeclaration: typespecifier vardecllist . SEMI
    8 vardecllist: vardecllist . COMMA vardeclinitialize

    COMMA  shift, and go to state 24
    SEMI   shift, and go to state 25


state 16

    9 vardecllist: vardeclinitialize .

    $default  reduce using rule 9 (vardecllist)


state 17

   10 vardeclinitialize: vardeclid .
   11                  | vardeclid . COLON simpleexpression

    COLON  shift, and go to state 26

    $default  reduce using rule 10 (vardeclinitialize)


state 18

   25 paramtypelist: typespecifier . paramidlist

    ID  shift, and go to state 27

    paramidlist  go to state 28
    paramid      go to state 29


state 19

   20 fundeclaration: ID LPAREN params . RPAREN statement

    RPAREN  shift, and go to state 30


state 20

   21 params: paramlist .
   23 paramlist: paramlist . SEMI paramtypelist

    SEMI  shift, and go to state 31

    $default  reduce using rule 21 (params)


state 21

   24 paramlist: paramtypelist .

    $default  reduce using rule 24 (paramlist)


state 22

   13 vardeclid: ID LBRACKET . NUMCONST RBRACKET

    NUMCONST  shift, and go to state 32


state 23

   19 fundeclaration: typespecifier ID LPAREN . params RPAREN statement

    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    $default  reduce using rule 22 (params)

    typespecifier  go to state 18
    params         go to state 33
    paramlist      go to state 20
    paramtypelist  go to state 21


state 24

    8 vardecllist: vardecllist COMMA . vardeclinitialize

    ID  shift, and go to state 34

    vardeclinitialize  go to state 35
    vardeclid          go to state 17


state 25

    6 vardeclaration: typespecifier vardecllist SEMI .

    $default  reduce using rule 6 (vardeclaration)


state 26

   11 vardeclinitialize: vardeclid COLON . simpleexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    simpleexpression    go to state 46
    andexpression       go to state 47
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 27

   28 paramid: ID .
   29        | ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 59

    $default  reduce using rule 28 (paramid)


state 28

   25 paramtypelist: typespecifier paramidlist .
   26 paramidlist: paramidlist . COMMA paramid

    COMMA  shift, and go to state 60

    $default  reduce using rule 25 (paramtypelist)


state 29

   27 paramidlist: paramid .

    $default  reduce using rule 27 (paramidlist)


state 30

   20 fundeclaration: ID LPAREN params RPAREN . statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BREAK        shift, and go to state 61
    FALSE        shift, and go to state 40
    FOREACH      shift, and go to state 62
    IF           shift, and go to state 63
    NOT          shift, and go to state 41
    RETURN       shift, and go to state 64
    TRUE         shift, and go to state 42
    WHILE        shift, and go to state 65
    LPAREN       shift, and go to state 43
    LBRACE       shift, and go to state 66
    SEMI         shift, and go to state 67
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    statement               go to state 68
    sstatement              go to state 69
    compoundstmt            go to state 70
    expressionstmt          go to state 71
    matchedselectionstmt    go to state 72
    unmatchedselectionstmt  go to state 73
    returnstmt              go to state 74
    breakstmt               go to state 75
    expression              go to state 76
    simpleexpression        go to state 77
    andexpression           go to state 47
    unaryrelexpression      go to state 48
    relexpression           go to state 49
    sumexpression           go to state 50
    term                    go to state 51
    unaryexpression         go to state 52
    unaryop                 go to state 53
    factor                  go to state 54
    mutable                 go to state 78
    immutable               go to state 56
    call                    go to state 57
    constant                go to state 58


state 31

   23 paramlist: paramlist SEMI . paramtypelist

    BOOL  shift, and go to state 2
    CHAR  shift, and go to state 3
    INT   shift, and go to state 4

    typespecifier  go to state 18
    paramtypelist  go to state 79


state 32

   13 vardeclid: ID LBRACKET NUMCONST . RBRACKET

    RBRACKET  shift, and go to state 80


state 33

   19 fundeclaration: typespecifier ID LPAREN params . RPAREN statement

    RPAREN  shift, and go to state 81


state 34

   12 vardeclid: ID .
   13          | ID . LBRACKET NUMCONST RBRACKET

    LBRACKET  shift, and go to state 22

    $default  reduce using rule 12 (vardeclid)


state 35

    8 vardecllist: vardecllist COMMA vardeclinitialize .

    $default  reduce using rule 8 (vardecllist)


state 36

   89 mutable: ID .
   90        | ID . LBRACKET expression RBRACKET
   94 call: ID . LPAREN args RPAREN

    LBRACKET  shift, and go to state 82
    LPAREN    shift, and go to state 83

    $default  reduce using rule 89 (mutable)


state 37

   99 constant: NUMCONST .

    $default  reduce using rule 99 (constant)


state 38

  100 constant: CHARCONST .

    $default  reduce using rule 100 (constant)


state 39

  101 constant: STRINGCONST .

    $default  reduce using rule 101 (constant)


state 40

  103 constant: FALSE .

    $default  reduce using rule 103 (constant)


state 41

   64 unaryrelexpression: NOT . unaryrelexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    unaryrelexpression  go to state 84
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 42

  102 constant: TRUE .

    $default  reduce using rule 102 (constant)


state 43

   91 immutable: LPAREN . expression RPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    expression          go to state 85
    simpleexpression    go to state 77
    andexpression       go to state 47
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 78
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 44

   85 unaryop: MINUS .

    $default  reduce using rule 85 (unaryop)


state 45

   86 unaryop: MULTI .

    $default  reduce using rule 86 (unaryop)


state 46

   11 vardeclinitialize: vardeclid COLON simpleexpression .
   60 simpleexpression: simpleexpression . OR andexpression

    OR  shift, and go to state 86

    $default  reduce using rule 11 (vardeclinitialize)


state 47

   61 simpleexpression: andexpression .
   62 andexpression: andexpression . AND unaryrelexpression

    AND  shift, and go to state 87

    $default  reduce using rule 61 (simpleexpression)


state 48

   63 andexpression: unaryrelexpression .

    $default  reduce using rule 63 (andexpression)


state 49

   65 unaryrelexpression: relexpression .

    $default  reduce using rule 65 (unaryrelexpression)


state 50

   66 relexpression: sumexpression . relop sumexpression
   67              | sumexpression .
   74 sumexpression: sumexpression . sumop term

    EQUIV    shift, and go to state 88
    NEQ      shift, and go to state 89
    LEQ      shift, and go to state 90
    LESSER   shift, and go to state 91
    GEQ      shift, and go to state 92
    GREATER  shift, and go to state 93
    PLUS     shift, and go to state 94
    MINUS    shift, and go to state 95

    $default  reduce using rule 67 (relexpression)

    relop  go to state 96
    sumop  go to state 97


state 51

   75 sumexpression: term .
   78 term: term . mulop unaryexpression

    DIVIDE  shift, and go to state 98
    MOD     shift, and go to state 99
    MULTI   shift, and go to state 100

    $default  reduce using rule 75 (sumexpression)

    mulop  go to state 101


state 52

   79 term: unaryexpression .

    $default  reduce using rule 79 (term)


state 53

   83 unaryexpression: unaryop . unaryexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    unaryexpression  go to state 102
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


state 54

   84 unaryexpression: factor .

    $default  reduce using rule 84 (unaryexpression)


state 55

   88 factor: mutable .

    $default  reduce using rule 88 (factor)


state 56

   87 factor: immutable .

    $default  reduce using rule 87 (factor)


state 57

   92 immutable: call .

    $default  reduce using rule 92 (immutable)


state 58

   93 immutable: constant .

    $default  reduce using rule 93 (immutable)


state 59

   29 paramid: ID LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 103


state 60

   26 paramidlist: paramidlist COMMA . paramid

    ID  shift, and go to state 27

    paramid  go to state 104


state 61

   53 breakstmt: BREAK . SEMI

    SEMI  shift, and go to state 105


state 62

   45 matchedselectionstmt: FOREACH . LPAREN mutable IN simpleexpression RPAREN matchedselectionstmt
   50 unmatchedselectionstmt: FOREACH . LPAREN mutable IN simpleexpression RPAREN unmatchedselectionstmt

    LPAREN  shift, and go to state 106


state 63

   43 matchedselectionstmt: IF . LPAREN simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   47 unmatchedselectionstmt: IF . LPAREN simpleexpression RPAREN statement
   48                       | IF . LPAREN simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt

    LPAREN  shift, and go to state 107


state 64

   51 returnstmt: RETURN . SEMI
   52           | RETURN . expression SEMI

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    SEMI         shift, and go to state 108
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    expression          go to state 109
    simpleexpression    go to state 77
    andexpression       go to state 47
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 78
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 65

   44 matchedselectionstmt: WHILE . LPAREN simpleexpression RPAREN matchedselectionstmt
   49 unmatchedselectionstmt: WHILE . LPAREN simpleexpression RPAREN unmatchedselectionstmt

    LPAREN  shift, and go to state 110


state 66

   36 compoundstmt: LBRACE . localdeclarations statementlist RBRACE

    $default  reduce using rule 38 (localdeclarations)

    localdeclarations  go to state 111


state 67

   42 expressionstmt: SEMI .

    $default  reduce using rule 42 (expressionstmt)


state 68

   20 fundeclaration: ID LPAREN params RPAREN statement .

    $default  reduce using rule 20 (fundeclaration)


state 69

   46 matchedselectionstmt: sstatement .

    $default  reduce using rule 46 (matchedselectionstmt)


state 70

   33 sstatement: compoundstmt .

    $default  reduce using rule 33 (sstatement)


state 71

   32 sstatement: expressionstmt .

    $default  reduce using rule 32 (sstatement)


state 72

   30 statement: matchedselectionstmt .

    $default  reduce using rule 30 (statement)


state 73

   31 statement: unmatchedselectionstmt .

    $default  reduce using rule 31 (statement)


state 74

   34 sstatement: returnstmt .

    $default  reduce using rule 34 (sstatement)


state 75

   35 sstatement: breakstmt .

    $default  reduce using rule 35 (sstatement)


state 76

   41 expressionstmt: expression . SEMI

    SEMI  shift, and go to state 112


state 77

   59 expression: simpleexpression .
   60 simpleexpression: simpleexpression . OR andexpression

    OR  shift, and go to state 86

    $default  reduce using rule 59 (expression)


state 78

   54 expression: mutable . ASSIGN expression
   55           | mutable . PASSIGN expression
   56           | mutable . MASSIGN expression
   57           | mutable . INC
   58           | mutable . DEC
   88 factor: mutable .

    ASSIGN   shift, and go to state 113
    PASSIGN  shift, and go to state 114
    MASSIGN  shift, and go to state 115
    DEC      shift, and go to state 116
    INC      shift, and go to state 117

    $default  reduce using rule 88 (factor)


state 79

   23 paramlist: paramlist SEMI paramtypelist .

    $default  reduce using rule 23 (paramlist)


state 80

   13 vardeclid: ID LBRACKET NUMCONST RBRACKET .

    $default  reduce using rule 13 (vardeclid)


state 81

   19 fundeclaration: typespecifier ID LPAREN params RPAREN . statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    BREAK        shift, and go to state 61
    FALSE        shift, and go to state 40
    FOREACH      shift, and go to state 62
    IF           shift, and go to state 63
    NOT          shift, and go to state 41
    RETURN       shift, and go to state 64
    TRUE         shift, and go to state 42
    WHILE        shift, and go to state 65
    LPAREN       shift, and go to state 43
    LBRACE       shift, and go to state 66
    SEMI         shift, and go to state 67
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    statement               go to state 118
    sstatement              go to state 69
    compoundstmt            go to state 70
    expressionstmt          go to state 71
    matchedselectionstmt    go to state 72
    unmatchedselectionstmt  go to state 73
    returnstmt              go to state 74
    breakstmt               go to state 75
    expression              go to state 76
    simpleexpression        go to state 77
    andexpression           go to state 47
    unaryrelexpression      go to state 48
    relexpression           go to state 49
    sumexpression           go to state 50
    term                    go to state 51
    unaryexpression         go to state 52
    unaryop                 go to state 53
    factor                  go to state 54
    mutable                 go to state 78
    immutable               go to state 56
    call                    go to state 57
    constant                go to state 58


state 82

   90 mutable: ID LBRACKET . expression RBRACKET

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    expression          go to state 119
    simpleexpression    go to state 77
    andexpression       go to state 47
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 78
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 83

   94 call: ID LPAREN . args RPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    $default  reduce using rule 96 (args)

    expression          go to state 120
    simpleexpression    go to state 77
    andexpression       go to state 47
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 78
    immutable           go to state 56
    call                go to state 57
    args                go to state 121
    arglist             go to state 122
    constant            go to state 58


state 84

   64 unaryrelexpression: NOT unaryrelexpression .

    $default  reduce using rule 64 (unaryrelexpression)


state 85

   91 immutable: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 123


state 86

   60 simpleexpression: simpleexpression OR . andexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    andexpression       go to state 124
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 87

   62 andexpression: andexpression AND . unaryrelexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    unaryrelexpression  go to state 125
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 88

   72 relop: EQUIV .

    $default  reduce using rule 72 (relop)


state 89

   73 relop: NEQ .

    $default  reduce using rule 73 (relop)


state 90

   68 relop: LEQ .

    $default  reduce using rule 68 (relop)


state 91

   69 relop: LESSER .

    $default  reduce using rule 69 (relop)


state 92

   71 relop: GEQ .

    $default  reduce using rule 71 (relop)


state 93

   70 relop: GREATER .

    $default  reduce using rule 70 (relop)


state 94

   76 sumop: PLUS .

    $default  reduce using rule 76 (sumop)


state 95

   77 sumop: MINUS .

    $default  reduce using rule 77 (sumop)


state 96

   66 relexpression: sumexpression relop . sumexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    sumexpression    go to state 126
    term             go to state 51
    unaryexpression  go to state 52
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


state 97

   74 sumexpression: sumexpression sumop . term

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    term             go to state 127
    unaryexpression  go to state 52
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


state 98

   81 mulop: DIVIDE .

    $default  reduce using rule 81 (mulop)


state 99

   82 mulop: MOD .

    $default  reduce using rule 82 (mulop)


state 100

   80 mulop: MULTI .

    $default  reduce using rule 80 (mulop)


state 101

   78 term: term mulop . unaryexpression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    unaryexpression  go to state 128
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


state 102

   83 unaryexpression: unaryop unaryexpression .

    $default  reduce using rule 83 (unaryexpression)


state 103

   29 paramid: ID LBRACKET RBRACKET .

    $default  reduce using rule 29 (paramid)


state 104

   26 paramidlist: paramidlist COMMA paramid .

    $default  reduce using rule 26 (paramidlist)


state 105

   53 breakstmt: BREAK SEMI .

    $default  reduce using rule 53 (breakstmt)


state 106

   45 matchedselectionstmt: FOREACH LPAREN . mutable IN simpleexpression RPAREN matchedselectionstmt
   50 unmatchedselectionstmt: FOREACH LPAREN . mutable IN simpleexpression RPAREN unmatchedselectionstmt

    ID  shift, and go to state 129

    mutable  go to state 130


state 107

   43 matchedselectionstmt: IF LPAREN . simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   47 unmatchedselectionstmt: IF LPAREN . simpleexpression RPAREN statement
   48                       | IF LPAREN . simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    FALSE        shift, and go to state 40
    NOT          shift, and go to state 41
    TRUE         shift, and go to state 42
    LPAREN       shift, and go to state 43
    MINUS        shift, and go to state 44
    MULTI        shift, and go to state 45

    simpleexpression    go to state 131
    andexpression       go to state 47
    unaryrelexpression  go to state 48
    relexpression       go to state 49
    sumexpression       go to state 50
    term                go to state 51
    unaryexpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


state 108

   51 returnstmt: RETURN SEMI .

    $default  reduce using rule 51 (returnstmt)


state 109

   52 returnstmt: RETURN expression . SEMI

    SEMI  shift, and go to state 132


state 110
